# cars

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  docker-stack.yml  requirements.txt  scrapy.cfg  scrapyd.conf  setup.cfg  setup.py  stack.yml
app/: pipelines.py  settings.py
app/app/: items.py  pipelines.py  settings.py
app/app/spiders/: craigslist.py
app/spiders/: craigslist.py
configs/scrapy/: scrapy.cfg
configs/scrapyd/: scrapyd.conf
docs/: TODO.md
work/: ETL.ipynb
