[metadata]
name = app

[options]
package_dir =
    =.
packages = find:
setup_requires =
    setuptools_scm
    isort
    flake8
python_requires = >=3.8.2
install_requires =
    beautifulsoup4
    fake-useragent
    mechanicalsoup
    scrapy-fake-useragent
    scrapy

[options.packages.find]
exclude =
    tests
    logs
    data

[options.entry_points]
scrapy =
    settings = app.settings

[options.extras_require]
testing =
    tox
